ai-platform-engineering/vault/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: "nginx"
  rules:
    - host: localhost
      http:
        paths:
          - path: /vault(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: vault
                port:
                  number: 8200
    - host: cnoe.localtest.me
      http:
        paths:
          - path: /vault(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: vault
                port:
                  number: 8200
          - path: /ui(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: vault
                port:
                  number: 8200
